--- a/ArrangeApp/app/build.gradle
+++ b/ArrangeApp/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 21
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "app.kan.com.arrangeapp"
-        minSdkVersion 15
-        targetSdkVersion 23
+        applicationId "com.kan.arrange"
+        minSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -22,5 +22,4 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
 }
