--- a/ArrangeApp/app/build.gradle
+++ b/ArrangeApp/app/build.gradle
@@ -21,5 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:24.0.0-alpha1'
     testCompile 'junit:junit:4.12'
 }
