--- a/ArrangeApp/BaseLibrary/build.gradle
+++ b/ArrangeApp/BaseLibrary/build.gradle
@@ -4,12 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "23.0.3"
 
-    defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
-    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -22,4 +17,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
