--- a/ArrangeApp/BaseLibrary/build.gradle
+++ b/ArrangeApp/BaseLibrary/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 21
     buildToolsVersion "23.0.3"
 
 
@@ -16,6 +16,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:support-v4:24.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
     compile 'org.greenrobot:eventbus:3.0.0'
 }
