--- a/ArrangeApp/BaseLibrary/src/main/AndroidManifest.xml
+++ b/ArrangeApp/BaseLibrary/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kan.lib">
 
+    <uses-sdk android:minSdkVersion="14"></uses-sdk>
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
