--- a/ArrangeApp/Database/build.gradle
+++ b/ArrangeApp/Database/build.gradle
@@ -1,34 +1,38 @@
 apply plugin: 'com.android.library'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 23
+        minSdkVersion 19
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
+    greendao {
+        //版本号，升级时可配置
+        schemaVersion 1
+        daoPackage 'com.kan.database.greendao.gen'
+        //生成实体类的根目录
+        targetGenDir 'src/main/java/'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    useLibrary 'org.apache.http.legacy'
-
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //greendao依赖
+    compile 'org.greenrobot:greendao:3.2.0'
     testCompile 'junit:junit:4.12'
-    compile project(':BaseLibrary')
 }
