--- a/ArrangeApp/BaseLibrary/build.gradle
+++ b/ArrangeApp/BaseLibrary/build.gradle
@@ -16,8 +16,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile files('libs/android-support-v13.jar')
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
