--- a/ArrangeApp/BaseLibrary/src/main/AndroidManifest.xml
+++ b/ArrangeApp/BaseLibrary/src/main/AndroidManifest.xml
@@ -5,9 +5,8 @@
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+        android:hardwareAccelerated="true"
     >
-
     </application>
 
 </manifest>
