--- a/ArrangeApp/app/src/main/AndroidManifest.xml
+++ b/ArrangeApp/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+        android:theme="@android:style/Theme.Holo.Light.NoActionBar">
         <activity android:name="com.arrange.app.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
