第一次数据结果的提交，包含冒泡排序，插入排序

--- a/ArrangeApp/app/src/main/AndroidManifest.xml
+++ b/ArrangeApp/app/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
         <activity android:name=".app.UploadGifActivity"/>
         <activity android:name=".rotat.app.FirstActivity"/>
         <activity android:name=".rotat.app.SecondActivity"/>
+        <activity android:name="data.StructureActivity"/>
     </application>
 
 </manifest>
