--- a/ArrangeApp/BaseLibrary/src/main/AndroidManifest.xml
+++ b/ArrangeApp/BaseLibrary/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.base">
 
-    <uses-sdk android:minSdkVersion="14"></uses-sdk>
+    <uses-sdk android:minSdkVersion="14">
+
+    </uses-sdk>
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
     >
+        <activity android:name=".app.SubActivity"/>
     </application>
 
 </manifest>
