--- a/ArrangeApp/settings.gradle
+++ b/ArrangeApp/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':BaseLibrary', ':Network', ':Database'
+include ':app', ':BaseLibrary', ':Network', ':Database', ':datastructure', ':DataStructure'
